force-app/main/default/objects/QueryStation__c/QueryStation__c.object-meta.xml
<CustomObject>
    <label>Query Station</label>
    <nameField>
        <displayFormat>QS-{0000}</displayFormat>
        <label>QueryStation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>