force-app/main/default/objects/QueryStation__c/fields/Allowed_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Permission_Sets__c</fullName>
    <description>Comma-separated list of Permission Set API names authorised to execute this query. Leave blank to allow any user who passes the Custom Permission gate. Example: Sales_User,Service_User</description>
    <inlineHelpText>Enter comma-separated Permission Set API names (no spaces around commas). Blank means no Permission Set restriction.</inlineHelpText>
    <label>Allowed Permission Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>