force-app/main/default/objects/QueryStation__c/fields/Query_For__c.field-meta.xml
<CustomField>
    <fullName>Query_For__c</fullName>
    <label>Enter the SOQL here</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>