force-app/main/default/objects/QueryStation__c/fields/Query_Key__c.field-meta.xml
<CustomField>
    <fullName>Query_Key__c</fullName>
    <label>Query Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>