force-app/main/default/objects/QueryStation__c/fields/Query_Source__c.field-meta.xml
<CustomField>
    <fullName>Query_Source__c</fullName>
    <label>Query Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inline</fullName>
                <default>true</default>
                <label>Inline</label>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>