force-app/main/default/objects/QueryStation__c/fields/Query_Text__c.field-meta.xml
<CustomField>
    <fullName>Query_Text__c</fullName>
    <label>Query Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>