force-app/main/default/objects/QueryStation__c/fields/Required_Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Required_Custom_Permission__c</fullName>
    <description>API name of the Custom Permission required to execute this query. Leave blank to skip the Custom Permission gate. Example: QueryStation_Access</description>
    <inlineHelpText>Enter the Custom Permission API name (e.g. QueryStation_Access). Blank skips this gate entirely.</inlineHelpText>
    <label>Required Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>