force-app/main/default/objects/QueryStation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Query_Key__c</columns>
    <columns>Query_Text__c</columns>
    <columns>Parameters__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>